java/net/MulticastSocket/SetGetNetworkInterfaceTest.java throws java.net.SocketException: Cannot assign requested address

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 8
    • Component/s: core-libs
    • b01

      TESTFAIL: java/net/MulticastSocket/SetGetNetworkInterfaceTest.java

      test result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Test Fail

            Assignee:
            Mark Sheppard (Inactive)
            Reporter:
            Charlie Wang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: