8027903: java/net/MulticastSocket/SetGetNetworkInterfaceTest.java throws java.net.SocketException: Cannot assign requested address

Check for pending Exception and clear if invoking ipv6 mcast_set_xxx function during setNetworkInterface call flow.

Reviewed-by: alanb, chegar